Avoid line breaks in row element when resizing. Set up width, margin properly for SearchInput element.

--- a/app/css/components/mentor/representer-row.css
+++ b/app/css/components/mentor/representer-row.css
@@ -60,7 +60,7 @@
             @apply flex items-center justify-center;
             @apply font-semibold text-12 leading-code;
             @apply py-2 px-8 border-orange border-1 rounded-5 bg-lightOrange;
-            @apply ml-8 text-lightBrown;
+            @apply ml-8 text-lightBrown whitespace-nowrap;
         }
         & .--status {
             @apply font-medium text-14 text-textColor6 leading-code;
